--- a/front-end/style.css
+++ b/front-end/style.css
@@ -1,5 +1,20 @@
-h1{
+header {
+  background-color: #d3d3d3;
+}
+
+.card-img-top{
+  height: 190px;
+  object-fit: cover;/*affiche l'image qui reste centrer en gardant l'aspect ratio*/
+}
+
+
+h1, h2{
   text-align: center;
+  margin-bottom: 10px;
+}
+
+.metier p {
+  margin-left: 3rem;
 }
 
 table table-image{
@@ -18,68 +33,56 @@ thead {
 
 table table-image td,
 table table-image th {
-  border: 1px solid #AAAAAA;
+  border: 1px solid #fcf5d9;
   padding: 3px 2px;
 }
 
-  th, td {
-    border: 1px solid black;
+th, td {
+  border: 1px solid black;
+
   }
 
 caption{
   padding-top: 50px;
+  margin-left: 3rem;
 }
-
-
-/*
-/*table table-image {
-  border: 1px solid black;
-  background-color: #EEEEEE;
-  width: 100%;
-  text-align: left;
-  border-collapse: collapse;
-}
-thead {
-  text-align: left;
-}
-
-table table-image td,
-table table-image th {
-  border: 1px solid #AAAAAA;
-  padding: 3px 2px;
-}
-
-table table-image tbody td {
-  font-size: 13px;
-  text-align: center;
-}
-
-table table-image tr:nth-child(even) {
-  background: #D0E4F5;
-}
-
-table table-image thead {
-  background: #1C6EA4;
-  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  border-bottom: 2px solid #444444;
-}
-
-table table-image thead th {
-  font-size: 15px;
-  font-weight: bold;
-  color: #FFFFFF;
-  border-left: 2px solid #D0E4F5;
-}
-
-table table-image thead th:first-child {
-  border-left: none;
-}*/
-
 
 footer{
 display: flex!important;
 justify-content: space-around;
 padding-top: 30px;
+background-color: #d3d3d3;
+}
+
+#allproducts {
+  width: auto;
+}
+
+@media (max-width : 450px) {
+  #allproducts {
+  margin: 50px 40px;
+  }
+}
+
+@media (max-width: 450px) {
+  #allproducts {
+    margin: 30px 10px;
+  }
+}
+
+@media screen and (max-width:450px){
+
+  .pied p{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    align-items: center;
+    text-align: center;
+    font-size: 13px;
+  }
+
+  ul {
+    font-size: 13px;
+  }
+
 }
